# softcred

./: Cargo.toml  README.md  rustfmt.toml
bulletproofs/: Cargo.toml
bulletproofs/src/: generators.rs
bulletproofs/src/r1cs/: constraint_system.rs  linear_combination.rs  prover.rs  verifier.rs
gadgets/: Cargo.toml
gadgets/src/: lib.rs
gadgets/src/merkle_tree/: mod.rs
gadgets/src/poseidon/: builder.rs  mod.rs  sbox.rs
gadgets/src/poseidon/constants/: mod.rs
gadgets/src/range/: mod.rs
gadgets/src/smt/: builder.rs  mod.rs
gadgets/src/utils/: mod.rs  r1cs.rs  scalar.rs
gadgets/src/zero_nonzero/: mod.rs  tests.rs
pbcwa/: Cargo.toml
pbcwa/src/: constants.rs  credential.rs  issuer.rs  lib.rs
pbcwa/src/utils/: attribute_tree.rs  bulletproofs.rs  mod.rs  nizk_commit.rs  nizk_cred.rs  nizk_dleq.rs  nizk_dlog.rs
